--- a/src/components/Graphic.astro
+++ b/src/components/Graphic.astro
@@ -5,7 +5,7 @@
       transparent 0
     );
     background-size: 10px 10px;
-    width: 200px;
+    width: 100%;
     border: solid 1px var(--color-foreground);
     box-shadow: var(--shadow1);
   }
