--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -20,6 +20,9 @@
     width: 1.5rem;
     fill: var(--color-foreground);
   }
+  .social a:hover {
+    --p: 88%;
+  }
   .social a:hover svg {
     fill: var(--color-incidental);
   }
