--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,34 +9,27 @@ import Layout from "../layouts/Layout.astro";
   <Box>
     <Writing />
     <p>
-      I've forged a career at the intersection of design and web development ✨
+      I've forged a career at the intersection of design and web development ✨.
     </p>
     <p>
-      I advocate{" "}
-      <a
-        href="https://www.interaction-design.org/literature/article/a-simple-introduction-to-lean-ux"
-      >
-        Lean UX
-      </a>
-      , thriving in collaborative environments where my empathy and leadership brings
-      out the best qualities of my team.
+      I love connecting the dots, being curious and innovating by
+      experimentation, iteration and rapid-prototyping.
     </p>
     <p>
-      As a generalist and creative, I love connecting the dots, staying curious
-      and experimenting with what’s possible
+      I have a Masters degree in Innovation and Applied Entrepreneurship and
+      have solid experience of working with Agile, Lean, and Design Thinking.
     </p>
     <p>Flexing my Frontend Engineering skills, I pride myself on:</p>
     <ul>
-      <li>writing well-formed semantic HTML (and SVG),</li>
+      <li>writing well-formed semantic HTML,</li>
       <li>styling with CSS, and</li>
       <li>progressively enhancing with JavaScript (including React.js).</li>
     </ul>
     <p>I champion inclusive design and web accessibility.</p>
-    <hr />
     <p>
       You can read <a href="/thoughts">thoughts from my digital garden</a> and check
       out my <a href="/experiments"
-        >experiments in interaction, visualisation and animation
+        >experiments in interactive visualisation
       </a>.
     </p>
   </Box>
