--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -2,7 +2,8 @@
   .stack {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
+    height: 100%;
   }
 
   .stack > * {
