--- a/src/pages/thoughts.astro
+++ b/src/pages/thoughts.astro
@@ -5,6 +5,7 @@ import Stack from "../components/Stack.astro";
 import Layout from "../layouts/Layout.astro";
 
 const posts = await Astro.glob("./thoughts/*.mdx");
+const nonDraftPosts = posts.filter((post) => !post.frontmatter.draft);
 ---
 
 <Layout title="Digital garden">
@@ -26,7 +27,7 @@ const posts = await Astro.glob("./thoughts/*.mdx");
   </p>
 
   <Grid slot="card-grid">
-    {posts.map((post) => (
+    {nonDraftPosts.map((post) => (
       <Card href={post.url}>
         <Stack>
           <h2>{post.frontmatter.title}</h2>
