adding icons for garden and tweaking copy

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,8 @@ import Layout from "../layouts/Layout.astro";
       I've forged a career at the intersection of design and web development ✨.
     </p>
     <p>
-      I love connecting the dots, being curious and innovating by
+      My empathy, curiosity and creativity means that I'm happiest connecting
+      the dots, coming up with novel ideas and innovating through
       experimentation, iteration and rapid-prototyping.
     </p>
     <p>
