--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -15,7 +15,7 @@
     stroke: var(--color-foreground);
   }
 </style>
-<a class="title" href="/">
+<a class="title" href="/" title="index page">
   <title>Dave Lovemartin</title>
   <svg viewBox="0 0 48 48">
     <g stroke-width="1.24">
