--- a/src/components/CardFooter.astro
+++ b/src/components/CardFooter.astro
@@ -1,9 +1,5 @@
 ---
-export interface Props {
-  href: string;
-}
-
-const { href } = Astro.props as Props;
+const { href } = Astro.props;
 ---
 
 <style is:global>
