--- a/src/components/Experiment.astro
+++ b/src/components/Experiment.astro
@@ -2,12 +2,7 @@
 import Box from "../components/Box.astro";
 import Graphic from "../components/Graphic.astro";
 
-export interface Props {
-  title: string;
-  description?: string;
-}
-
-const { title, description } = Astro.props as Props;
+const { title, description } = Astro.props;
 ---
 
 <Box>
