--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,11 +6,7 @@ import Header from "../components/Header.astro";
 
 import "@fontsource/comic-mono";
 
-export interface Props {
-  title: string;
-}
-
-const { title } = Astro.props.frontmatter || (Astro.props as Props);
+const { title } = Astro.props.frontmatter || Astro.props;
 ---
 
 <!DOCTYPE html>
