--- a/src/pages/thoughts.astro
+++ b/src/pages/thoughts.astro
@@ -16,16 +16,15 @@ const nonDraftPosts = posts.filter((post) => !post.frontmatter.draft);
   <p>
     This digital garden is where I share reflections, sowing seeds of thought
     that can be cultivated and nutured into fruitful structured writing.
-  </p><p>
+  </p>
+  <p>
     Inspired by <a href="https://nesslabs.com/digital-garden-set-up"
-      >Anne-Laure Le Cunff
-    </a>, <a href="https://maggieappleton.com/garden-history"
-      >Maggie Appleton
-    </a> and <a href="https://twitter.com/Mappletons/status/1250532315459194880"
-      >others
-    </a>, this is not a chronological blog but an evergreen place where ideas
+      >Anne-Laure Le Cunff</a>, <a href="https://maggieappleton.com/garden-history"
+      >Maggie Appleton</a> and <a href="https://twitter.com/Mappletons/status/1250532315459194880"
+      >others</a>, this is not a chronological blog but an evergreen place where ideas
     can be edited and refined.
-  </p><p>
+  </p>
+  <p>
     It is better to work in the open and be comfortable with iterative progress,
     than wait for the big reveal...
   </p>
