--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,7 +6,7 @@ import Header from "../components/Header.astro";
 
 import "@fontsource/comic-mono";
 
-const { title } = Astro.props.frontmatter || Astro.props;
+const { title, description } = Astro.props.frontmatter || Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -14,9 +14,28 @@ const { title } = Astro.props.frontmatter || Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <!-- <link rel="stylesheet" href="//basehold.it/24" /> -->
-    <title>{title}</title>
+    <title>{title || "davelovemartin"}</title>
+    <meta
+      name="description"
+      content={description || "Exploring Innovation in Web Tech"}
+    />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1e374d" />
+    <meta name="msapplication-TileColor" content="#fef9ef" />
+    <meta name="theme-color" content="#fef9ef" />
+    <meta name="theme-color" content="#0496ff" />
+    <meta name="twitter:title" content={title || "davelovemartin"} />
+    <meta
+      name="twitter:description"
+      content={description || "Exploring Innovation in Web Tech"}
+    />
+    <meta name="twitter:url" content="https://davelovemartin.com/?src=twitter"
+    />
+    <meta name="twitter:creator" content="@davelovemartin" />
   </head>
   <body>
     <Cover>
