tweaking grid,  header and alignment

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -14,6 +14,8 @@ const { href } = Astro.props;
     transition: all var(--t2) ease-out;
     border-radius: var(--border-radius);
     text-decoration: none !important;
+    margin-block-start: 0;
+    margin-block-end: 0;
   }
   .card:hover {
     background: none;
