--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,37 +1,31 @@
 ---
-import Box from "../components/Box.astro";
-import Centre from "../components/Centre.astro";
 import Writing from "../components/Writing.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="davelovemartin">
-  <Box>
-    <Writing />
-    <p>
-      I've forged a career at the intersection of design and web development ✨.
-    </p>
-    <p>
-      My empathy, curiosity and creativity means that I'm happiest connecting
-      the dots, coming up with novel ideas and innovating through
-      experimentation, iteration and rapid-prototyping.
-    </p>
-    <p>
-      I have a Masters degree in Innovation and Applied Entrepreneurship and
-      have solid experience of working with Agile, Lean, and Design Thinking.
-    </p>
-    <p>Flexing my Frontend Engineering skills, I pride myself on:</p>
-    <ul>
-      <li>writing well-formed semantic HTML,</li>
-      <li>styling with CSS, and</li>
-      <li>progressively enhancing with JavaScript (including React.js).</li>
-    </ul>
-    <p>I champion inclusive design and web accessibility.</p>
-    <p>
-      You can read <a href="/thoughts">thoughts from my digital garden</a> and check
-      out my <a href="/experiments"
-        >experiments in interactive visualisation
-      </a>.
-    </p>
-  </Box>
+  <Writing />
+  <p>
+    I've forged a career at the intersection of design and web development ✨.
+  </p>
+  <p>
+    My empathy, curiosity and creativity means that I'm happiest connecting the
+    dots, coming up with novel ideas and innovating through experimentation,
+    iteration and rapid-prototyping.
+  </p>
+  <p>
+    I have a Masters degree in Innovation and Applied Entrepreneurship and have
+    solid experience of working with Agile, Lean, and Design Thinking.
+  </p>
+  <p>Flexing my Frontend Engineering skills, I pride myself on:</p>
+  <ul>
+    <li>writing well-formed semantic HTML,</li>
+    <li>styling with CSS, and</li>
+    <li>progressively enhancing with JavaScript (including React.js).</li>
+  </ul>
+  <p>I champion inclusive design and web accessibility.</p>
+  <p>
+    You can read <a href="/thoughts">thoughts from my digital garden</a> and check
+    out my <a href="/experiments">experiments in interactive visualisation</a>.
+  </p>
 </Layout>
