adding technical discovery canvas article and icons

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -73,6 +73,7 @@ const { title, description } = Astro.props.frontmatter || Astro.props;
         --s1: calc(var(--s0) * var(--ratio));
         --s2: calc(var(--s1) * var(--ratio));
         --s3: calc(var(--s2) * var(--ratio));
+        --s4: calc(var(--s3) * var(--ratio));
         /* timing */
         --t1: 0.2s;
         --t2: 0.4s;
