updating interstitial journaling article

--- a/src/components/Activities.astro
+++ b/src/components/Activities.astro
@@ -1,12 +1,38 @@
 <style>
-    svg {
-        width: auto;
-        height: var(--s4);
-    }
-    svg g path {
-        fill: none;
-        stroke: var(--color-foreground);
-    }
+  svg {
+    width: auto;
+    height: var(--s4);
+  }
+  svg g path {
+    fill: none;
+    stroke: var(--color-foreground);
+  }
 </style>
 
-<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" stroke-miterlimit="10" style="fill-rule:nonzero;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;" viewBox="0 0 48 48"><g stroke="#242433" stroke-width=".521"><path fill="#585779" fill-opacity=".5181" stroke-linecap="butt" d="M3 24.0599c0-2.9419 2.3849-5.3268 5.3268-5.3268 2.942 0 5.3269 2.3849 5.3269 5.3268 0 2.9419-2.3849 5.3268-5.3269 5.3268C5.385 29.3867 3 27.0018 3 24.0599Zm15.6732 0c0-2.9419 2.3849-5.3268 5.3268-5.3268 2.9419 0 5.3268 2.3849 5.3268 5.3268 0 2.9419-2.3849 5.3268-5.3268 5.3268-2.9419 0-5.3268-2.3849-5.3268-5.3268Zm15.6731 0c0-2.9419 2.3849-5.3268 5.3269-5.3268 2.9419 0 5.3268 2.3849 5.3268 5.3268 0 2.9419-2.3849 5.3268-5.3268 5.3268-2.942 0-5.3269-2.3849-5.3269-5.3268Z"/><g fill="none"><path d="M14.8087 23.6522c-.158.0421.537-.0212.6196-.0158.5101.0334 1.5777.1322 2.0784.2048"/><path d="M16.5084 22.7798c.2374.3776.546.5184.8813.7819.8239.6476-.9303.34-.8238.9782"/></g><g fill="none"><path d="M30.4425 23.6522c-.158.0421.537-.0212.6196-.0158.5101.0334 1.5778.1322 2.0784.2048"/><path d="M32.1422 22.7798c.2374.3776.546.5184.8813.7819.824.6476-.9302.34-.8238.9782"/></g></g></svg>
+<svg
+  xmlns="http://www.w3.org/2000/svg"
+  xml:space="preserve"
+  stroke-miterlimit="10"
+  style="fill-rule:nonzero;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;"
+  viewBox="0 0 48 48"
+  ><g stroke="#242433" stroke-width=".521"
+    ><path
+      fill="#585779"
+      fill-opacity=".5181"
+      stroke-linecap="butt"
+      d="M3 24.0599c0-2.9419 2.3849-5.3268 5.3268-5.3268 2.942 0 5.3269 2.3849 5.3269 5.3268 0 2.9419-2.3849 5.3268-5.3269 5.3268C5.385 29.3867 3 27.0018 3 24.0599Zm15.6732 0c0-2.9419 2.3849-5.3268 5.3268-5.3268 2.9419 0 5.3268 2.3849 5.3268 5.3268 0 2.9419-2.3849 5.3268-5.3268 5.3268-2.9419 0-5.3268-2.3849-5.3268-5.3268Zm15.6731 0c0-2.9419 2.3849-5.3268 5.3269-5.3268 2.9419 0 5.3268 2.3849 5.3268 5.3268 0 2.9419-2.3849 5.3268-5.3268 5.3268-2.942 0-5.3269-2.3849-5.3269-5.3268Z"
+    ></path><g fill="none"
+      ><path
+        d="M14.8087 23.6522c-.158.0421.537-.0212.6196-.0158.5101.0334 1.5777.1322 2.0784.2048"
+      ></path><path
+        d="M16.5084 22.7798c.2374.3776.546.5184.8813.7819.8239.6476-.9303.34-.8238.9782"
+      ></path>
+    </g><g fill="none"
+      ><path
+        d="M30.4425 23.6522c-.158.0421.537-.0212.6196-.0158.5101.0334 1.5778.1322 2.0784.2048"
+      ></path><path
+        d="M32.1422 22.7798c.2374.3776.546.5184.8813.7819.824.6476-.9302.34-.8238.9782"
+      ></path>
+    </g>
+  </g>
+</svg>
