--- a/src/experiments/BouncingBallExperiment.astro
+++ b/src/experiments/BouncingBallExperiment.astro
@@ -7,4 +7,5 @@ import BouncingBallContainer from "./BouncingBallContainer.jsx";
 </style>
 
 <h2 id="ball">Animating ball bouncing</h2>
+<p>Three versions:</p>
 <BouncingBallContainer client:visible />
