--- a/src/pages/experiments.astro
+++ b/src/pages/experiments.astro
@@ -4,7 +4,10 @@ import BouncingBallExperiment from "../experiments/BouncingBallExperiment.astro"
 ---
 
 <Layout title="Experiments">
-  <p>Okay. So I confess, there's not much here at the moment other than this bouncing ball!</p>
+  <p>
+    Okay. So I confess, there's not much here at the moment other than this
+    bouncing ball!
+  </p>
   <ul>
     <li>
       <a href="#ball">Bouncing ball</a>
