connecting to notion table

--- a/src/pages/experiments.astro
+++ b/src/pages/experiments.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import BouncingBallExperiment from "../experiments/BouncingBallExperiment.astro";
+import Habits from "../experiments/Habits.astro";
 ---
 
 <Layout title="Experiments">
@@ -12,6 +13,10 @@ import BouncingBallExperiment from "../experiments/BouncingBallExperiment.astro"
     <li>
       <a href="#ball">Bouncing ball</a>
     </li>
+    <li>
+      <a href="#habits">My habit tracker</a>
+    </li>
   </ul>
   <BouncingBallExperiment />
+  <Habits />
 </Layout>
