adding last edited

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,7 +6,7 @@ import Header from "../components/Header.astro";
 
 import "@fontsource/comic-mono";
 
-const { title, description } = Astro.props.frontmatter || Astro.props;
+const { title, description, lastEdited } = Astro.props.frontmatter || Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -45,6 +45,7 @@ const { title, description } = Astro.props.frontmatter || Astro.props;
           <h1 class={title === "davelovemartin" ? "visually-hidden" : ""}>
             {title}
           </h1>
+          {lastEdited && <p>last edited: {lastEdited}</p>}
           <slot />
         </Centre>
         <slot name="card-grid" />
