updating dopamine notes

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,7 +6,8 @@ import Header from "../components/Header.astro";
 
 import "@fontsource/comic-mono";
 
-const { title, description, lastEdited } = Astro.props.frontmatter || Astro.props;
+const { title, description, lastEdited } =
+  Astro.props.frontmatter || Astro.props;
 ---
 
 <!DOCTYPE html>
