--- a/src/components/NavItem.astro
+++ b/src/components/NavItem.astro
@@ -1,4 +1,10 @@
 ---
+interface Props {
+  currentPath: string;
+  href: string;
+  title: string;
+}
+
 const { currentPath, href, title } = Astro.props;
 ---
 
