--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,9 @@ import Layout from "../layouts/Layout.astro";
   </ul>
   <p>I champion inclusive design and web accessibility.</p>
   <p>
-    You can read <a href="/thoughts">thoughts from my digital garden</a> and check
-    out my <a href="/experiments">experiments in interactive visualisation</a>.
+    You can read <a href="/digital-garden">thoughts from my digital garden</a> and
+    check out my <a href="/experiments"
+      >experiments in interactive visualisation
+    </a>.
   </p>
 </Layout>
