--- a/src/components/Experiment.astro
+++ b/src/components/Experiment.astro
@@ -2,6 +2,11 @@
 import Box from "../components/Box.astro";
 import Graphic from "../components/Graphic.astro";
 
+interface Props {
+  title: string;
+  description: string;
+}
+
 const { title, description } = Astro.props;
 ---
 
