updating dopamine essay

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import Layout from "../layouts/Layout.astro";
   <p>
     You can read <a href="/digital-garden">thoughts from my digital garden</a> and
     check out my <a href="/experiments"
-      >experiments in interactive visualisation
+      >experiments
     </a>.
   </p>
 </Layout>
