updating dopamine essay

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,8 +26,6 @@ import Layout from "../layouts/Layout.astro";
   <p>I champion inclusive design and web accessibility.</p>
   <p>
     You can read <a href="/digital-garden">thoughts from my digital garden</a> and
-    check out my <a href="/experiments"
-      >experiments
-    </a>.
+    check out my <a href="/experiments">experiments</a>.
   </p>
 </Layout>
