fixing link styles

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -25,6 +25,7 @@ const { href } = Astro.props;
     background: none;
     box-shadow: var(--shadow2);
     transform: scale(1.01236);
+    color: var(--color-foreground);
   }
   .card div h2 {
     min-height: calc(3 * var(--s1));
