writing intro to animating svgs

--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -46,7 +46,7 @@
       ></path>
       <path
         stroke="#fcb326"
-        stroke-width="1.0853"
+        stroke-width=".62"
         d="M10.7122 10.8585c0-.3135-.52 6.978-.7024 8.9854l-.9952 10.9463c-.2142 2.3571-.4097 4.4782-.4097 6.8488m3.7171-26.8975c0 2.3323-.4041 4.6494-.6147 6.9658-.4636 5.0997-1.4341 18.7454-1.4341 20.3707"
       ></path>
     </g>
