--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -212,6 +212,9 @@ const { title, description, lastEdited, stage } =
         font-size: var(--s0);
         letter-spacing: -0.025em;
       }
+      strong {
+        font-variation-settings: "wdth" 100, "wght" 600;
+      }
       h1 + p,
       p + p,
       p + ul,
