--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,18 +10,27 @@ import Layout from "../layouts/Layout.astro";
   </p>
   <p>
     My empathy, curiosity and creativity means that I'm happiest connecting the
-    dots, coming up with novel ideas and innovating through experimentation,
-    iteration and rapid-prototyping.
+    dots, coming up with novel ideas and innovating through <strong>
+      experimentation
+    </strong>,
+    <strong>iteration</strong> and <strong>rapid-prototyping</strong>.
   </p>
   <p>
-    I have a Masters degree in Innovation and Applied Entrepreneurship and have
-    solid experience of working with Agile, Lean, and Design Thinking.
+    I have a Masters degree in <strong>
+      Innovation and Applied Entrepreneurship
+    </strong> and have solid experience of working with <strong>Agile</strong>, <strong
+    >
+      Lean
+    </strong>, and <strong>User Centered Design</strong>.
   </p>
-  <p>Flexing my Frontend Engineering skills, I pride myself on:</p>
+  <p>
+    I create highly <strong>accessible</strong>, <strong>performant</strong> and
+    <strong>usable</strong> user interfaces by:
+  </p>
   <ul>
-    <li>writing well-formed semantic HTML,</li>
-    <li>styling with CSS, and</li>
-    <li>progressively enhancing with JavaScript (including React.js).</li>
+    <li>writing well-formed semantic <strong>HTML</strong>,</li>
+    <li>styling with modern <strong>CSS</strong>, and</li>
+    <li>coding resilient <strong>JavaScript</strong> (including React.js).</li>
   </ul>
   <p>I champion inclusive design and web accessibility.</p>
   <p>
