--- a/src/pages/digital-garden.astro
+++ b/src/pages/digital-garden.astro
@@ -19,12 +19,14 @@ const nonDraftPosts = posts.filter((post) => !post.data.draft);
     that can be cultivated and nutured into fruitful structured writing.
   </p>
   <p>
-    Inspired by <a href="https://nesslabs.com/digital-garden-set-up"
-      >Anne-Laure Le Cunff
-    </a>, <a href="https://maggieappleton.com/garden-history"
-      >Maggie Appleton
-    </a> and <a href="https://twitter.com/Mappletons/status/1250532315459194880"
-      >others
+    Inspired by <a href="https://nesslabs.com/digital-garden-set-up">
+      Anne-Laure Le Cunff
+    </a>, <a href="https://maggieappleton.com/garden-history">
+      Maggie Appleton
+    </a> and <a
+      href="https://twitter.com/Mappletons/status/1250532315459194880"
+    >
+      others
     </a>, this is not a chronological blog but an evergreen place where ideas
     can be edited and refined.
   </p>
