more animation svg stuff

--- a/src/components/experiments/SvgExample.astro
+++ b/src/components/experiments/SvgExample.astro
@@ -1,8 +1,1 @@
-<style>
-  svg {
-    width: 25vw;
-    height: 25vw;
-  }
-</style>
-
-<svg viewBox="0 0 48 48"></svg>
+<svg width="200px" height="200px" viewBox="0 0 48 48"></svg>
