--- a/src/components/NavItem.astro
+++ b/src/components/NavItem.astro
@@ -27,7 +27,8 @@ const { currentPath, href, title } = Astro.props;
     color: var(--color-foreground);
   }
   .nav-item svg {
-    margin-top: -0.4rem;
+    margin-top: -0.5rem;
+    margin-left: 0.5rem;
   }
   @media (max-width: 500px) {
     .nav-item svg {
